[package]
name = "tls-psk-tunnel"
version = "0.1.0"
authors = ["Asim Ihsan <asim.ihsan@gmail.com>"]
edition = "2018"

[lib]
name = "tlspsklib"
path = "src/lib.rs"

[dependencies]
bytes = "0.5.6"
eyre = "0.6.0"
futures = "0.3.5"
openssl = "0.10.30"
stable-eyre = "0.2.1"
tokio = { version = "0.2.22", features = ["full"] }
tokio-openssl = "0.4.0"