[package]
name = "tls-psk-tunnel"
version = "0.1.0"
authors = ["Asim Ihsan <asim.ihsan@gmail.com>"]
edition = "2018"

[lib]
name = "tlspsklib"
path = "src/lib.rs"

[dependencies]
bytes = "1.2.1"
eyre = "0.6.8"
futures = "0.3.25"
openssl = "0.10.42"
stable-eyre = "0.2.2"
tokio = { version = "1.24.2", features = ["full"] }
tokio-openssl = "0.6.3"
